fix collapsing problem

--- a/proj/src/main/webapp/chat.css
+++ b/proj/src/main/webapp/chat.css
@@ -171,7 +171,7 @@ a:hover {
 
 .bottom {
     width: inherit;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     z-index: 1;
 }
@@ -293,9 +293,8 @@ and (min-width: 450px) {
 /* tablets only */
 @media only screen and (max-width: 1000px) 
 and (min-width: 700px) {
-    .bg-gold {
+    /* .bg-gold {
         width: 145px;
-    }
-
+    } */
 } 
     
